# scrapper

./: .env.example  .gitignore  FILE_LISTING.md  INDEX.md  PROJECT_COMPLETION_SUMMARY.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  WELCOME.txt  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  celery_app.py  main.py  pyproject.toml  requirements.txt  scrapper.db
backend/app/core/: config.py  database.py  security.py
backend/app/models/: models.py
backend/app/routers/: auth.py  products.py  tasks.py
backend/app/schemas/: schemas.py
backend/app/services/: scraping_service.py
database/: schema.sql
docs/: ARCHITECTURE.md  DEVELOPMENT.md
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/login/: page.tsx
frontend/components/analytics/: analytics.tsx
frontend/components/forms/: task-form.tsx
frontend/components/layout/: header.tsx  sidebar.tsx
frontend/components/products/: products-table.tsx
frontend/components/tasks/: tasks-list.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx
frontend/hooks/: useApi.ts
frontend/lib/: api.ts
frontend/store/: authStore.ts
frontend/styles/: globals.css
frontend/types/: index.ts
workers/: Dockerfile  celery_config.py  requirements.txt
workers/scrapers/: base_scraper.py  shopee_scraper.py  tiktok_scraper.py
