[tool.poetry]
name = "scrapper-backend"
version = "0.1.0"
description = "Web Scraping SaaS Platform Backend"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
celery = "^5.3.4"
redis = "^5.0.1"
python-dotenv = "^1.0.0"
playwright = "^1.40.0"
aiohttp = "^3.9.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
